<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<TextView
		android:id="@+id/textView1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/ubicar_dispositivos"
		android:gravity="center_horizontal"
		android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
      android:id="@+id/btShowISP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/textView1"
      android:text="@string/mostrar_isp" />

    <Button
        android:id="@+id/btShowLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/btShowISP"
        android:text="@string/actualizar_localizacion" />

    <ListView
        android:id="@+id/DeviceListDisponible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btPublicar"
        android:layout_below="@+id/btShowLocation"
        android:divider="@null"
        android:layout_marginTop="17dp" >
    </ListView>

</RelativeLayout>
