<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SeleccionFragment" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="27dp"
                android:text="@string/hello_world" />

            <Button
                android:id="@+id/btBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="20dp"
                android:text="@string/BT_buscar_dispositivos"/>

            <CheckBox
                android:id="@+id/checkBox1_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/btBuscar"
                android:text="@string/BT_visible"/>

            <Button
                android:id="@+id/btPublicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btBuscar"
                android:layout_alignRight="@+id/btBuscar"
                android:layout_below="@+id/checkBox1_visible"
                android:layout_marginTop="19dp"
                android:text="@string/publicar"/>

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btPublicar"
                android:layout_centerHorizontal="true" />

            <ListView
                android:id="@+id/DeviceList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btPublicar"
                android:layout_below="@+id/textInfo"
                android:divider="@null"
                android:layout_marginTop="17dp" >
            </ListView>


</RelativeLayout>